--- a/css/responsive.css
+++ b/css/responsive.css
@@ -40,12 +40,17 @@
     .w-head h1 {
         font-size: 35px;
     }
+    .w-head h2 span {
+        font-size: 35px;
+        line-height: 30px;
+    }
     #weather th {
         font-size: 19px;
     }
     #weather td {
         font-size: 18px;
     }
+    
     
 }
 
@@ -96,6 +101,23 @@
         -ms-flex:0 0 33%;
         flex:0 0 33%;
         max-width:33%;
+    }
+    .w-head h2 span {
+        font-size: 45px;
+        display: inline-block;
+        line-height: 0px;
+    }
+    .download{
+        padding-top: 0 !important;
+    }
+    #weather th {
+        font-size: 15px;
+    }
+    #weather th, #weather td {
+        padding: 5px 5px;
+    }
+    #weather td {
+        font-size: 14px;
     }
  
 }
