--- a/css/style.css
+++ b/css/style.css
@@ -397,16 +397,23 @@ header.pres {
     margin-top: -32px;
     padding: 8px 9px;
     position: absolute;
-    right: 0;
+    right: 15px !important;
     text-decoration: none;
     top: 0;
     width: 22px;
+}
+.two.mean-container a.meanmenu-reveal {
+    border: 1px solid #000;
+    color: #000;
 }
 .mean-container a.meanmenu-reveal span {
     background: #fff none repeat scroll 0 0;
     display: block;
     height: 3px;
     margin-top: 3px;
+}
+.two.mean-container a.meanmenu-reveal span {
+    background: #000 none repeat scroll 0 0;
 }
 .mean-container .mean-nav {
     background: #ccc none repeat scroll 0 0;
@@ -555,6 +562,7 @@ header.pres {
 	line-height: 50px;
 }
 .download a{
+	font-size: 10px;
 	font-style: italic;
 	color: #000000;
 	border-bottom: 1px solid #000;
