--- a/css/responsive.css
+++ b/css/responsive.css
@@ -37,6 +37,12 @@
         font-size: 50px;
     }
 
+    .slider-content.three h1{
+        font-size: 85px;
+    }
+    .slider-content.three h4{
+        font-size: 45px;
+    }
     .w-head h1 {
         font-size: 35px;
     }
@@ -89,6 +95,18 @@
     .slider-content.two h4 {
         font-size: 40px;
     }
+    .slider-content.three h1{
+        font-size: 60px;
+    }
+    .slider-content.three h4{
+        font-size: 40px;
+    }
+    .slider-content.three.four h1{
+        font-size: 44px;
+    }
+    .slider-content.three.four h4{
+        font-size: 35px;
+    }
     .slider-content.sound h1 {
         font-size: 70px;
         margin-bottom: 60px;
@@ -96,11 +114,20 @@
     .slider-content.sound h4 {
         font-size: 25px;
     }
+    .slider-content.sound h4 span.cmb{
+        display: none;
+    }
     .col-my{
         -webkit-box-flex:0;
         -ms-flex:0 0 33%;
         flex:0 0 33%;
         max-width:33%;
+    }
+    .col-my.we{
+        -webkit-box-flex:0;
+        -ms-flex:0 0 50%;
+        flex:0 0 50%;
+        max-width:50%;
     }
     .w-head h2 span {
         font-size: 45px;
