--- a/css/responsive.css
+++ b/css/responsive.css
@@ -43,6 +43,10 @@
     .slider-content.three h4{
         font-size: 45px;
     }
+    .clock{
+        width: 300px;
+        height: 300px;
+    }
     .w-head h1 {
         font-size: 35px;
     }
@@ -128,6 +132,31 @@
         -ms-flex:0 0 50%;
         flex:0 0 50%;
         max-width:50%;
+    }
+    .clock{
+        width: 250px;
+        height: 250px;
+    }
+    .hour, .hr{
+        width: 120px;
+        height: 120px;
+    }
+    .min, .mn{
+        width: 140px;
+        height: 140px;
+    }
+    .sec, .sc{
+        width: 180px;
+        height: 180px;
+    }
+    .hr::before{
+        height: 60px;
+    }
+    .mn::before{
+        height: 70px;
+    }
+    .sc::before{
+        height: 115px;
     }
     .w-head h2 span {
         font-size: 45px;
