--- a/css/style.css
+++ b/css/style.css
@@ -567,6 +567,87 @@ header.pres {
 
 /* Presentation-area */
 
+
+#clock{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	background: #68a4ff;
+}
+.clock{
+	width: 400px;
+	height: 400px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	border: 20px solid #fff;
+	box-shadow: inset 0 0 30px rgba(0,0,0,.1),
+				0 20px 20px rgba(0,0,0,.2),
+				0 0 0 4px rgba(255,255,255.1);
+}
+.clock::before{
+	position: absolute;
+	content: '';
+	width: 15px;
+	height: 15px;
+	background: #848484;
+	border: 2px solid #fff;
+	z-index: 100000;
+	border-radius: 50%;
+}
+.hour,
+.min,
+.sec{
+	position: absolute;
+}
+.hour, .hr{
+	width: 160px;
+	height: 160px;
+}
+.min, .mn{
+	width: 190px;
+	height: 190px;
+}
+.sec, .sc{
+	width: 230px;
+	height: 230px;
+}
+.hr,.mn,.sc{
+	display: flex;
+	justify-content: center;
+	position: absolute;
+	border-radius: 50%;
+}
+.hr::before{
+	position: absolute;
+	content: '';
+	width: 8px;
+	height: 80px;
+	background: #848484;
+	z-index: 10;
+	border-radius: 6px 6px 0 0;
+}
+.mn::before{
+	position: absolute;
+	content: '';
+	width: 4px;
+	height: 90px;
+	background: #333;
+	z-index: 11;
+	border-radius: 6px 6px 0 0;
+}
+.sc::before{
+	position: absolute;
+	content: '';
+	width: 2px;
+	height: 155px;
+	background: #ff6767;
+	z-index: 12;
+	border-radius: 6px 6px 0 0;
+}
+
 .w-head h1 {
 	font-size: 62px;
 	font-weight: 700;
