--- a/css/responsive.css
+++ b/css/responsive.css
@@ -106,7 +106,7 @@
         font-size: 40px;
     }
     .slider-content.three h4 br{
-        display: block;
+        display: block !important;
     }
     .slider-content.three.four h1{
         font-size: 44px;
